# quantum-power-flow

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: paper_case5.yaml  stressed_case5.yaml
docs/: algorithm_mapping.md  limitations_and_interpretation.md  reconstruction_notes.md
notebooks/: reproduce_paper.ipynb
paper/: README.md
results/: README.md
results/diagnostics/: hhl_circuit.txt  hhl_circuit_statistics.json  inferred_line_impedance.json  reproduction_metrics.json  stochastic_summary.json
results/tables/: phase_register_precision_ablation.csv  stochastic_explicit_circuit_validation.csv  test_i_branch_flows.csv  test_i_classical_fdlf_trace.csv  test_i_newton_comparison.csv  test_i_qiskit_hhl_trace.csv  test_i_table_i_comparison.csv  test_ii_classical_trace.csv  test_ii_quantum_trace.csv
scripts/: infer_missing_line_data.py  reproduce_all.py
src/qpf_repro/: __init__.py  cases.py  cli.py  inference.py  linear.py  models.py  network.py  plotting.py  powerflow.py  reference_data.py  reporting.py  stochastic.py
src/qpf_repro/experiments/: __init__.py  reproduce.py
src/qpf_repro/quantum/: __init__.py  hhl.py
tests/: test_hhl.py  test_powerflow.py  test_reconstruction.py  test_stochastic.py
